feat(auth): change employee endpoint to singular
